<resources>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_close">Close</string>
    <string name="accessibility_app_name">Immuni</string>
    <string name="tabbar_title_home">Home</string>
    <string name="tabbar_title_settings">Settings</string>
    <string name="notifications_update_os_title">The service isn\'t activated yet</string>
    <string name="notifications_update_os_description">Open the app to finish activating it.</string>
    <string name="notifications_update_app_title">⚠️ You need to update the app</string>
    <string name="notifications_update_app_description">An important update is available. Update the app now to make sure it keeps working.</string>
    <string name="notifications_not_active_service_title">⚠️ The service is inactive</string>
    <string name="notifications_not_active_service_description">Reactivate Immuni as soon as possible so that it can warn you in the case of risk.</string>
    <string name="notifications_apple_exposure_notification_message">Someone you\'ve had close contact with has tested positive.</string>
    <string name="notifications_risk_title">Important message for you</string>
    <string name="notifications_risk_description">Open the app for more information.</string>
    <string name="notifications_update_positive_state_title">Update your status</string>
    <string name="notifications_update_positive_state_description">Open the app if you have any updates about your situation.</string>
    <string name="force_update_view_app_title">Update the app to continue</string>
    <string name="force_update_view_app_details">An important update is available. Update the app now to make sure it keeps working.</string>
    <string name="force_update_view_update">Update</string>
    <string name="force_update_view_os_title">Update your operating system to continue</string>
    <string name="force_update_view_os_details">A newer version of iOS (13.5 or higher) is required to enable exposure notifications.</string>
    <string name="permission_tutorial_update_os_title">To update your operating system</string>
    <string name="permission_tutorial_update_os_second"><b>2. Go to \'General\'</b></string>
    <string name="permission_tutorial_update_os_third"><b>3. Go to \'Software Update\'</b></string>
    <string name="permission_tutorial_update_os_fourth"><b>4. Select \'Download and install\' and follow the instructions</b></string>
    <string name="app_setup_view_network_error">Connection failed. Please check your internet connection and try again.</string>
    <string name="app_setup_view_generic_error">Unable to connect. Please try again later.</string>
    <string name="welcome_view_items_first_title">Hi!</string>
    <string name="welcome_view_items_first_description">With everyone\'s contribution, Immuni will help contain the virus and get us back to normal as soon as possible.</string>
    <string name="welcome_view_items_second_title">Immuni takes care of you</string>
    <string name="welcome_view_items_second_description">If you\'ve been in contact with a user who has subsequently tested positive for the virus, Immuni notifies you and gives you instructions to protect your health and the health of your loved ones.</string>
    <string name="welcome_view_items_third_title">Slowing down the epidemic together</string>
    <string name="welcome_view_items_third_description">Users who discover that they have been exposed to the virus can self-isolate, slowing down the spread of the virus and helping us return to normal life faster.</string>
    <string name="welcome_view_items_fourth_title">Your privacy is protected</string>
    <string name="welcome_view_items_fourth_description">The app works without tracking your movements and without knowing your identity or the identity of the people you come into contact with.</string>
    <string name="welcome_view_next_page_title">Next</string>
    <string name="welcome_view_go_next">Let\'s get started</string>
    <string name="privacy_title">Your privacy is safe</string>
    <string name="privacy_item_identity"><b>Immuni does not collect your first name, surname, date of birth, address, telephone number, or email address.</b></string>
    <string name="privacy_item_people"><b>Immuni cannot determine your identity</b> or the identity of the people you come into contact with.</string>
    <string name="privacy_item_location"><b>Immuni does not collect any geolocation data</b>, including GPS data. Your movements are not tracked in any way.</string>
    <string name="privacy_item_secure"><b>The data saved on your smartphone and the connections to the server are encrypted.</b></string>
    <string name="privacy_item_ministry"><b>To help the National Health Service</b> take care of you, Immuni tells the Ministry of Health server the following:\n- The province where you live\n- If the app is working properly\n- If you have been warned of a high-risk contact</string>
    <string name="privacy_item_italy">Your data is saved on servers in Italy, <b>managed by public bodies, and controlled by the Ministry of Health.</b></string>
    <string name="privacy_item_data_deletion"><b>All data is deleted when it is no longer needed.</b></string>
    <string name="privacy_checkbox_above14">I declare that I am at least 14 years old</string>
    <string name="privacy_checkbox_privacypolicyread"><![CDATA[I have read the <l>privacy notice</l>]]></string>
    <string name="privacy_tos"><![CDATA[By continuing, I declare that I have read and accepted the <l>terms of use</l>]]></string>
    <string name="privacy_next">Next</string>
    <string name="privacy_settings_title">Your privacy is safe</string>
    <string name="privacy_settings_show_full">Show full notice</string>
    <string name="home_view_service_deactivate">Disable the service</string>
    <string name="permission_tutorial_deactivate_service_title">How to disable the service</string>
    <string name="permission_tutorial_deactivate_service_second_message">In certain cases, it may make sense to temporarily disable the app, such as while at work if you are a healthcare professional in contact with COVID-19 patients.</string>
    <string name="permission_tutorial_deactivate_service_third_message">If you disable exposure notifications, subsequent contact with other users will not be logged.</string>
    <string name="permission_tutorial_deactivate_service_first_message_android">To protect your health and the health of your loved ones, only disable the service if necessary and reactivate it as soon as you can.</string>
    <string name="permission_tutorial_how_to_upload_positive_title">How to report a positive result</string>
    <string name="how_to_upload_positive_call_center_first">If you test positive for the virus, you can report this to Immuni and upload your random codes. By doing so, you allow the app to warn users with whom you have been in contact over the previous days that there is a risk of infection.</string>
    <string name="how_to_upload_positive_call_center_second">The call center operator 800.91.24.91 will assist you by phone. They will ask you for the CUN code, the last 8 digits of the health card, the start date of symptoms and the one-time code displayed on the previous screen, which they will use to give you authorisation to upload your data.</string>
    <string name="how_to_upload_positive_call_center_third">The CUN code is a unique national alphanumeric code (e.g. CUN-AB1234C567) associated with the molecular swab result. It is communicated to citizens via SMS, email or through the electronic health record.</string>
    <string name="how_to_upload_positive_call_center_fourth">The health card number is a 20-digit code found on the last line on the back of the health card. Remember that it is important to communicate the exact date  the  symptoms began to initiate accurate contact tracking.</string>
    <string name="green_certificate_certificate_issuer_label" translatable="false">Certificate issuer</string>
    <string name="green_certificate_certificate_issuer">Soggetto che ha rilasciato la certificazione</string>
    <string name="green_certificate_vaccine_type_label" translatable="false">Vaccine/prophylaxis</string>
    <string name="green_certificate_vaccine_type">Tipo di vaccino somministrato</string>
    <string name="green_certificate_vaccine_medicinal_product_label" translatable="false">Vaccine medicinal product</string>
    <string name="green_certificate_vaccine_medicinal_product">Denominazione del vaccino</string>
    <string name="green_certificate_producer_vaccine_label" translatable="false">Vaccine marketing authorisation holder or manufacturer</string>
    <string name="green_certificate_producer_vaccine">Produttore o titolare dell\'AIC del vaccino</string>
    <string name="green_certificate_dose_number_label" translatable="false">Number in a series of vaccinations/doses and the overall</string>
    <string name="green_certificate_dose_number">Numero della dose effettuata/numero totale dosi previste</string>
    <string name="green_certificate_date_of_vaccination_label" translatable="false">Date of vaccination (yyyy-mm-dd)</string>
    <string name="green_certificate_date_of_vaccination">Data dell\'ultima somministrazione</string>
    <string name="green_certificate_country_of_vaccination_label" translatable="false">State of vaccination</string>
    <string name="green_certificate_country_of_vaccination">Stato in cui è stata eseguita la vaccinazione</string>
    <string name="green_certificate_date_of_first_positive_label" translatable="false">Date of first positive NAAT test result (yyyy-mm-dd)</string>
    <string name="green_certificate_date_of_first_positive">Data del primo test molecolare positivo</string>
    <string name="green_certificate_certificate_valid_from_label" translatable="false">Certificate valid from (yyyy-mm-dd)</string>
    <string name="green_certificate_certificate_valid_from">Certificazione valida dal</string>
    <string name="green_certificate_certificate_valid_until_label" translatable="false">Certificate valid until (yyyy-mm-dd)</string>
    <string name="green_certificate_certificate_valid_until">Certificazione valida fino al</string>
    <string name="green_certificate_type_test_label" translatable="false">Type of test</string>
    <string name="green_certificate_type_test">Tipo di test</string>
    <string name="green_certificate_test_result_label" translatable="false">Result of the test</string>
    <string name="green_certificate_test_result">Risultato del test</string>
    <string name="green_certificate_rat_test_label" translatable="false">RAT test name and manufacturer</string>
    <string name="green_certificate_rat_test">Nome del test antigienico e nome del produttore</string>
    <string name="green_certificate_date_time_sc_label" translatable="false">Date and time of the test sample collection</string>
    <string name="green_certificate_date_time_sc">Data e ora del prelievo del campione</string>
    <string name="green_certificate_testing_centre_label" translatable="false">Testing centre or facility</string>
    <string name="green_certificate_testing_centre">Centro o struttura in cui è stato eseguito il test</string>
    <string name="green_certificate_country_test_label" translatable="false">State of test</string>
    <string name="green_certificate_country_test">Stato in cui è stato eseguito il test</string>
    <string name="green_certificate_country_recovery">Stato in cui è stato eseguito primo test molecolare positivo</string>
    <string name="green_certificate_validity_dgc_label" translatable="false">Validity of the EU Digital Covid Certificate</string>
    <string name="green_certificate_validity_dgc">Validità dell\'EU Digital Covid Certificate</string>
    <string name="green_certificate_certificate_issuer_const" translatable="false">Ministero della Salute</string>
</resources>