<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2020 Presidenza del Consiglio dei Ministri.
  ~ Please refer to the AUTHORS file for more information.
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program. If not, see <https://www.gnu.org/licenses/>.
  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/P1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/green_certificate_date_of_first_positive_label"
        android:layout_marginTop="24dp" />

    <TextView
        style="@style/P1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green_certificate_date_of_first_positive" />

    <TextView
        android:id="@+id/dateOfFirstPositiveResult"
        style="@style/P1Text.SemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_dark" />

    <TextView
        style="@style/P1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/green_certificate_country_test_label"
        android:layout_marginTop="24dp" />

    <TextView
        style="@style/P1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green_certificate_country_recovery" />

    <TextView
        android:id="@+id/countryTestRecovery"
        style="@style/P1Text.SemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_dark" />

    <TextView
        style="@style/P1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/green_certificate_certificate_issuer_label"
        android:layout_marginTop="24dp" />

    <TextView
        style="@style/P1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green_certificate_certificate_issuer" />

    <TextView
        style="@style/P1Text.SemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_dark"
        android:text="@string/green_certificate_certificate_issuer_const" />

    <TextView
        style="@style/P1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/green_certificate_certificate_valid_from_label"
        android:layout_marginTop="24dp" />

    <TextView
        style="@style/P1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green_certificate_certificate_valid_from" />

    <TextView
        android:id="@+id/certificateValidFrom"
        style="@style/P1Text.SemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_dark" />

    <TextView
        style="@style/P1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/green_certificate_certificate_valid_until_label"
        android:layout_marginTop="24dp" />

    <TextView
        style="@style/P1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green_certificate_certificate_valid_until"  />

    <TextView
        android:id="@+id/certificateValidUntil"
        style="@style/P1Text.SemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_dark" />

</LinearLayout>