<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        style="@style/H1Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/permission_tutorial_deactivate_service_title" />

    <TextView
        style="@style/P1Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="@string/permission_tutorial_deactivate_service_first_message_android"
        android:textColor="@color/text_error_red"
        app:drawableStartCompat="@drawable/ic_warning_small" />

    <TextView
        style="@style/P1Text.Generic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/permission_tutorial_deactivate_service_second_message" />

    <TextView
        style="@style/P1Text.Generic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/permission_tutorial_deactivate_service_third_message" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="32dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/disableExposureApi"
        style="@style/RoundedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/home_view_service_deactivate" />
</LinearLayout>